# MyJourneyIntoOpenGL

./: .clang-format  .gitmodules  CMakeLists.txt
resources/shader/: baseFragmentShader.fs  baseVertexShader.vert  baseVertexShader.vs  bloom.frag  bloom_final.frag  bloom_final.vert  debug_quad.frag  deferred_shading.frag  framebuffers.frag  framebuffers.vert  g_buffer.frag  lamp.vert  object.frag  object.vert  shadow_mapping.frag  shadow_mapping_depth.frag
src/: main.cpp  mesh.h  model.h  shader.h  stb_image.h
src/shader/: baseFragmentShader.fs
